fixed footnote issues

--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -51,7 +51,7 @@ If you go for an exotic solution or a complex technology, be sure that you are d
 
 ## Working as a team: tools & organisation
 
-Working as a team, whatever the coding project, requires adequate tools, discipline and organisation. 
+Working as a team, whatever the coding project, requires adequate tools, discipline and organization. 
 Complex Shiny Apps usually imply that several people will work on the application. 
 For example, at [ThinkR](//rtask.thinkr.fr), 3 to 4 people usually work in parallel on the same application, but there might be more people involved on larger projects. 
 The choice of tools and organisation is crucial for a successful application.
