--- a/15-when_optimize.Rmd
+++ b/15-when_optimize.Rmd
@@ -112,8 +112,8 @@ Leading a successful project means that you should, as much as possible, find th
 #### Identifying bottlenecks
 
 The best way to profile R code is by using the `{profvis}` [@R-profvis] package
-^[`{utils}` also comes with a function call `Rprof()`, but we will not be examining this one here, as `{profvis}` provides a more user-friendly and enhanced interface to this profiling function.
-], a package designed to evaluate how much time each part of a function call take. 
+^[`{utils}` also comes with a function call `Rprof()`, but we will not be examining this one here, as `{profvis}` provides a more user-friendly and enhanced interface to this profiling function.]
+, a package designed to evaluate how much time each part of a function call take. 
 With `{profvis}`, you can spot the bottleneck of your function. 
 Without an automated tool to do the profiling, the developers would have to profile by guessing, which will, most of the time, come with bad results: 
 
@@ -124,8 +124,8 @@ Without an automated tool to do the profiling, the developers would have to prof
 Instead of guessing, it is safe bet to go for a tool like `{profvis}`, which allows to have a detailed view of what takes a long time to run in your R code. 
 
 Using this package is quite straightforward: put the code you want to benchmark inside the `profvis()` function
-^[Do not forget to add `{}` inside `profvis({})` if you want to write several lines of code.
-], wait for  the code to run, and... that is it, you now have an analysis of your code running time. 
+^[Do not forget to add `{}` inside `profvis({})` if you want to write several lines of code.]
+, wait for  the code to run, and... that is it, you now have an analysis of your code running time. 
 
 Here is an example with 3 nested functions, `top()`, `middle()` and `bottom()`, where `top()` calls `middle()` which calls `bottom()`:
 
@@ -278,8 +278,8 @@ Yet a large portion of the web navigation is performed on a mobile or table.
 Already in 2016, Google [wrote](https://www.thinkwithgoogle.com/data/web-traffic-from-smartphones-and-tablets/) that "_More than half of all web traffic now comes from smartphones and tablets_". 
 Knowing the exact number of visitors that browse through mobile is hard: the web is vast, and not all website record the traffic they receive. 
 Yet many, if not all, studies around how the web is browsed are reporting the same results: more traffic is performed via mobile than via computer
-^[[broadbandsearch](https://www.broadbandsearch.net/blog/mobile-desktop-internet-usage-statistics) for example, reports a 53.3% share for mobile browsing.
-].
+^[[broadbandsearch](https://www.broadbandsearch.net/blog/mobile-desktop-internet-usage-statistics) for example, reports a 53.3% share for mobile browsing.]
+.
 
 And, the pro of running it in your browser is that it can perform the analysis on locally deployed applications: in other word, you can launch your Shiny application in your R console, open the app in Google Chrome, and run the audit. 
 A lot of online services needs an URL to do the audit!
@@ -297,8 +297,8 @@ Here is a quick introduction to this tool:
 + Click on "Generate Report"
 
 Note that you can also install a command line tool with `npm install -g lighthouse`
-^[Being a NodeJS application, you will need to have NodeJS installed on your machine.
-], then run `lighthouse http://urlto.audit`: it will produce either a JSON (if asked) or an HTML report (the default).
+^[Being a NodeJS application, you will need to have NodeJS installed on your machine.]
+, then run `lighthouse http://urlto.audit`: it will produce either a JSON (if asked) or an HTML report (the default).
 
 ![](img/lighthouse-audit.png) 
 
