--- a/17-optimizing-shiny-code.Rmd
+++ b/17-optimizing-shiny-code.Rmd
@@ -21,18 +21,16 @@ Caching is the process of storing resources intensive results so that when they 
 
 How does it work? 
 Let's make a brief parallel with the human brain, and imagine that you know that you will need to use a phone number many time in the day, and for the purpose of this thought experiment you are completely unable to remember it
-^[Anyway, now that we all have smartphone, who still remembers phone numbers?
-].
+^[Anyway, now that we all have smartphone, who still remembers phone numbers?]
+.
 What are you going to do? 
 There are two solutions here: either you look in the phone book or in your phone contact list every time you need it, which takes a couple of seconds every time, or you use a post-it that you put on your computer screen with the number of it, so that you have direct access to it when you need it. 
 It takes a couple of seconds the first time you look for the number, but it is almost instantaneous the next times you need it.
 
 This is what caching do: keep the result of computation so when they are needed in the very same context, they are quickly accessible.
 The downside being that you only have limited space on your screen: when your screen is covered by sticky notes, you can not store any more notes
-^[In that case, you can either hide pre-existing sticky notes, or buy a bigger screen. 
-But we are not here to talk about cache management theory. 
-If you are interesting in reading more about caching theory, we suggest the excellent _Algorithms to Live By_, by Brian Christian and Tom Griffiths.
-]. 
+^[In that case, you can either hide pre-existing sticky notes, or buy a bigger screen. But we are not here to talk about cache management theory. If you are interesting in reading more about caching theory, we suggest the excellent _Algorithms to Live By_, by Brian Christian and Tom Griffiths [@brianchristian2016].]
+. 
 
 In the context of an interactive application in a framework like Shiny, it makes much sense to cache data structures: users tend to repeat what they do, or go back and forth between parameters. 
 For example, if you have a graph that take 2 seconds to render (which is quite common in Shiny, notably when relying on `{ggplot2}` [@R-ggplot2]), you do not want these 2 seconds to be repeated over and over again when users switch from one parameter to another and back to the first, as the two graphs will be the same for the same parameter. 
@@ -131,8 +129,8 @@ The extra arguments you will find are `cacheKeyExpr` and `sizePolicy`: the forme
 `sizePolicy` is a function that returns a `width` and an `height`, and which are used to round the plot dimension in pixels, so that not every pixel combination are generated in the cache.
 
 The good news is that converting existing `renderPlot()` functions to `renderCachedPlot()` is pretty straightforward in most cases: take your current `renderPlot()`, and add the cache keys
-^[In some cases you will have to configure the size policy, but in most cases the default values work just well. 
-].
+^[In some cases you will have to configure the size policy, but in most cases the default values work just well.]
+.
 
 Here is an example: 
 
@@ -271,8 +269,8 @@ Natively, in Shiny, if user1 comes and launches a 15 second computation, then us
 With `{future}` and `{promises}`, each long computation is sent to be run somewhere else, so when user1 launches their 15 second computation, they are not blocking the R process for user2 and user3. 
 
 How does it work
-^[We're providing a short introduction with key concepts, but for a more thorough introduction, please refer to the [online documentation](https://rstudio.github.io/promises/index.html)
-]? 
+^[We're providing a short introduction with key concepts, but for a more thorough introduction, please refer to the [online documentation](https://rstudio.github.io/promises/index.html)]
+? 
 `{promises}` comes with two operators which will be useful in our case, `%...>%` and `%...!%`: the first being "what happens when the `future()` is solved?" (i.e. when the computation from the `future()` is completed), and the second is "what happens if the `future()` fails?" (i.e. what to do when the `future()` returns an error). 
 
 Here is an example of using this skeleton: 
