--- a/18-javascript.Rmd
+++ b/18-javascript.Rmd
@@ -29,8 +29,8 @@ Most of the time, when the JavaScript side of the websocket receives on of these
 On the R end of the websocket, _i.e_ when R receives data from the web page, a value is fetched, and something is computed. 
 
 What happens under the hood is a little bit complex and out of scope for this book, but the general idea is: R talks to your browser through a web socket (that you can imagine as a small "phone line" with both software modules listening at each end
-^[See this [dev.to](https://dev.to/buzzingbuzzer/comment/g0g) post for a quick introduction to the general concept of web socket
-]), and this browser talks to R through the same web socket.
+^[See this post on dev.to <https://dev.to/buzzingbuzzer/comment/g0g> for a quick introduction to the general concept of web socket]
+), and this browser talks to R through the same web socket.
 
 // TODO: create here a simple Flowchart 
 
@@ -49,9 +49,8 @@ __Knowing just enough JavaScript can improve the quality of your app__: especial
 All these things are good examples of where you should be using JavaScript instead of building more or less complex `renderUI` or `insertUI` patterns in your server.
 
 Moreover, the number of JavaScript libraries available on the web is tremendous ; and the good news is that Shiny has everything it needs to bundle external JavaScript libraries inside your application
-^[This can also be done by wrapping a JS libraries inside a package, which will later be used inside an application. 
-See for example `{glouton}` [@R-glouton], which is a wrapper around the [`js-cookie`](https://github.com/js-cookie/js-cookie) JavaScript library.
-].
+^[This can also be done by wrapping a JS libraries inside a package, which will later be used inside an application. See for example `{glouton}` [@R-glouton], which is a wrapper around the [`js-cookie`](https://github.com/js-cookie/js-cookie) JavaScript library.]
+.
 
 This is what this section of the book aims at: giving you just enough JavaScript knowledge to lighten your Shiny App, in order to improve the global user and developer experience.
 In this chapter, we will first review some JavaScript basics which can be used "client-side" only, i.e. only in your browser.
@@ -64,9 +63,8 @@ External resources are linked all throughout this chapter and at the end if you 
 ## A quick introduction to JavaScript
 
 JavaScript is a programming language which has been designed to work in the browser
-^[You can now work with JavaScript in a server with Node.JS, but this is out of scope of this book. 
-See linked resources to learn more.
-].
+^[You can now work with JavaScript in a server with Node.JS, but this is out of scope of this book. See linked resources to learn more.]
+.
 There are three ways to include the JavaScript code inside your web app: 
 
 + As an external file, which is served to the browser alongside your main application page
@@ -414,9 +412,8 @@ $(function(){
 ```
 
 Then, all the plots from your app will receive this on-click event
-^[This `click` behavior can also be done through `$(".shiny-plot-output").click(...)`. 
-We chose to display the `on("click")` pattern as it can be generalized to all DOM events.
-].
+^[This `click` behavior can also be done through `$(".shiny-plot-output").click(...)`. We chose to display the `on("click")` pattern as it can be generalized to all DOM events.]
+.
 
 Note that there is a series of `Shiny events` which are specific to Shiny but that can be used just like the one we have just seen: 
 
