--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -43,8 +43,8 @@ The general idea is to detect bugs and breaking changes at the moment they are h
 
 There are several packages in R that can be used to implement unit testing, and you can even implement your own tests. 
 One of the most popular right now
-^[Based on the number of Reverse dependencies & suggests at https://cran.r-project.org/web/packages/testthat/index.html
-] is `{testthat}` [@R-testthat].
+^[Based on the number of Reverse dependencies & suggests at https://cran.r-project.org/web/packages/testthat/index.html]
+is `{testthat}` [@R-testthat].
 This testing framework lets you write a series of tests and expectations, which are then launch when calling `test()` from `{devtools}` [@R-devtools], either locally or in you CI system. 
 
 Here is an example of testing that the `meaning_of_life` will always be `42`.
@@ -104,8 +104,8 @@ const puppeteer = require('puppeteer');
 
 Be aware though that this extension does not record everything, at least with the version used while writing this book (`0.7.1`). 
 For example, typing inside a text input is not recorded: that is completely doable inside `puppeteer`, yet not recorded by this extension
-^[See [puppeteer/issues/441](https://github.com/puppeteer/puppeteer/issues/441) for the code to set the text input values.
-].
+^[See [puppeteer/issues/441](https://github.com/puppeteer/puppeteer/issues/441) for the code to set the text input values.]
+.
 
 Once you have this piece of code, put it into a NodeJS script, and replay the session as many time as you need.
 If ever one of the steps can not be replayed as recorded, the script will fail, notifying you of a regression.
@@ -608,7 +608,8 @@ renv::snapshot(confirm = FALSE)
 Note that if you are building an application as a package, use `renv::snapshot(type = "explicit")` (need version > `0.9.3-99`): this will only capture the dependencies listed in the `DESCRIPTION` file.
 
 ```{r 12-step-by-step-secure-42, comment="", echo = FALSE}
-readLines("data-raw/renv.lock")
+readLines("data-raw/renv.lock") %>%
+  glue::as_glue()
 ```
 
 And now that you have a reproducible `{renv}` library, what is next? 
