--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,7 @@ graphics: yes
 ```{r index-1, include = FALSE}
 knitr::opts_chunk$set( 
   comment = "", 
-  cache = FALSE
+  cache = TRUE
 )
 
 options(
@@ -46,7 +46,7 @@ It will be published in 2020 in the [R Series](https://www.crcpress.com/go/the-r
 
 This book will not __get you started with Shiny__, nor __talk about how to deploy into production and scale your app__. 
 What we'll see is __the process of building the app__. 
-Why? Lots of blog posts and books talk about starting to use `{shiny}` [@R-shiny] or putting apps in production. 
+Why? Lots of blog posts and books talk about starting to use `{shiny}` [@R-shiny] or putting apps in production.
 Very few (if any) talk about this grey area between getting started and pushing into production. 
 
 So this is what this book is going to talk about: building Shiny application. 
@@ -139,16 +139,21 @@ xfun::session_info()
 
 ## Software information and conventions {-}
 
-The book has been built with the **knitr**\index{knitr} package [@xie2015] and the **bookdown**\index{bookdown} package [@R-bookdown] to compile my book. 
+This book has been built with `{knitr}` [@R-knitr] and `{bookdown}` [@R-bookdown]. 
 
-Package names are in curly brackets in code format (e.g., `{rmarkdown}`), and inline code and filenames are formatted in a typewriter font (e.g., `knitr::knit('foo.Rmd')`). Function names are followed by parentheses (e.g., `bookdown::render_book()`).
+Package names are in curly brackets in code format (e.g., `{rmarkdown}`), and inline code and filenames are formatted in a typewriter font (e.g., `knitr::knit('foo.Rmd')`).
+Function names are formatted in a typewriter font and followed by parentheses (e.g., `bookdown::render_book()`).
 
 ## Acknowledgments {-}
 
 ### Contributors to this book {-}
 
+Thanks to them for their help on the book!
+
 + [Liz Roten](https://github.com/eroten){target="_blank"}, for proofreading chapter 1 and helping us with writing advices. 
 + [Dan S. Reznik](https://github.com/dan-reznik){target="_blank"}, for proof-reading the JavaScript chapter.
++ [Harry Anderson](https://github.com/xari){target="_blank"}, for giving feedback on the JavaScript chapter.
++ [Julian Stanley](https://github.com/julianstanley){target="_blank"}, for proof-reading chapter 3. 
 
 
 ```{r index-4, include = FALSE}
