--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -491,7 +491,11 @@ app_server <- function(input, output, session) {
 ### Communication between modules 
 
 One of the hardest parts of using modules is sharing data across them. 
-There are at least three approaches: (i) returning a `reactive` function, (ii) the "stratégie du petit r" (to be pronounced with a french accent of course) or (iii) the "stratégie du grand R6". 
+There are at least three approaches:
+
++ Returning a `reactive` function 
++ The "stratégie du petit r" (to be pronounced with a french accent of course) 
++ The "stratégie du grand R6". 
 
 #### Returning values from the module
 
@@ -626,7 +630,7 @@ For example:
 Similarly to the "stratégie du petit r", we can create an R6 object, which is passed along inside the modules. 
 As this R6 object is not a reactive object and is not meant to be used as such, this reduces uncontrolled reactivity of the application, thus reduces the complexity of handling chain reactions across modules.
 Of course, you need to have another special tool in your app to trigger elements. 
-All this will be explained in details in chapter [Reactivity anti-patterns](#optim-caveat) of this book, and you can find an example of this pattern inside the [`{hexmake}` [@R-hexmake]](https://github.com/ColinFay/hexmake/blob/master/R/R6.R) application.
+All this will be explained in details in chapter [Reactivity anti-patterns](#optim-caveat) of this book, and you can find an example of this pattern inside the [`{hexmake}`](https://github.com/ColinFay/hexmake/blob/master/R/R6.R) [@R-hexmake] application.
 
 ## Structuring your app 
 
