--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -620,7 +620,7 @@ But let's now use the `{dichromat}` [@R-dichromat] package to simulate color bli
 
 ```{r 06-ux-matters-13 }
 library(dichromat)
-library(purrr)
+library(purrr, warn.conflicts = FALSE)
 ```
 
 + Deutan with `jet.colors` and `viridis`
