--- a/10-prototyping.Rmd
+++ b/10-prototyping.Rmd
@@ -109,7 +109,7 @@ random_ggplot() +
 Of course, the idea is to combine this with a Shiny interface, for example `random_ggplot()` will be used with a `renderPlot()` and `plotOutput()`.
 And as we want to prototype but still be close to what the app might look like, these functions take arguments that can shape the output: for example, `random_ggplot()` has a `type` parameter that can help you select a specific geom. 
 
-```{r 10-prototyping-5 }
+```{r 10-prototyping-5, eval = FALSE}
 library(shiny)
 library(shinipsum)
 library(DT)
