--- a/16-common-app-caveats.Rmd
+++ b/16-common-app-caveats.Rmd
@@ -382,7 +382,7 @@ Here are three strategies to code without `uiOutput()` & `renderUI()`.
 We will see in the last chapter of this book how you can integrate JS inside your Shiny app, and how even basic functions can be useful for making your app server lighter. 
 For example, compare: 
 
-```{r 16-common-app-caveats-8 }
+```{r 16-common-app-caveats-8, eval = FALSE}
 library(shiny)
 ui <- function(){
   tagList(
@@ -411,7 +411,7 @@ shinyApp(ui, server)
 
 to
 
-```{r 16-common-app-caveats-9 }
+```{r 16-common-app-caveats-9, eval = FALSE}
 library(shiny)
 ui <- function(){
   tagList(
@@ -455,7 +455,7 @@ But at a global level, lighter UI computation from the server side helps the gen
 
 Compare:
 
-```{r 16-common-app-caveats-10 }
+```{r 16-common-app-caveats-10, eval = FALSE}
 library(shiny)
 ui <- function(){
   tagList(
@@ -483,7 +483,7 @@ shinyApp(ui, server)
 
 to
 
-```{r 16-common-app-caveats-11 }
+```{r 16-common-app-caveats-11, eval = FALSE}
 library(shiny)
 ui <- function(){
   tagList(
@@ -518,7 +518,7 @@ And let's imagine it takes a quarter of a second to render the DOM element, that
 Almost every Shiny inputs, even the custom ones from packages, come with an `update_` function that allows to change the input values from the server side, instead of recreating the UI entirely. 
 For example, here is a way to update the content of a `selectInput` from the server side:
 
-```{r 16-common-app-caveats-12 }
+```{r 16-common-app-caveats-12, eval = FALSE}
 library(shiny)
 ui <- function(){
   tagList(
@@ -563,7 +563,7 @@ In other word, if you have `selectInput("x", "x")`, and that you remove this inp
 
 For example, in the following example, the `input$val` value will not be removed once you have called `removeUI(selector = "#val")`.
 
-```{r 16-common-app-caveats-13 }
+```{r 16-common-app-caveats-13, eval = FALSE}
 library(shiny)
 ui <- function(){
   tagList(
