--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -273,15 +273,19 @@ And now, we have new files inside the folder, corresponding to the session recor
 fs::dir_tree("shinylogs", recurse = FALSE)
 ```
 
+```{r 12-step-by-step-secure-16, echo = FALSE}
+fs::dir_tree("shinylogs", recurse = FALSE, regexp  = "csv$", invert = TRUE)
+```
+
 Good news: we do not have to manually analyze these files—`{shinyloadtest}` offers a series of wrapper functions to do that. 
 
-```{r 12-step-by-step-secure-16, message = FALSE}
+```{r 12-step-by-step-secure-17, message = FALSE, warning = FALSE}
 shinyload_runs <- shinyloadtest::load_runs("5 workers" = "shinylogs/run1")
 ```
 
-We now have a data.frame with 
+We now have a data.frame with:
 
-```{r 12-step-by-step-secure-17 }
+```{r 12-step-by-step-secure-18 }
 dplyr::glimpse(shinyload_runs)
 ```
 
@@ -290,19 +294,19 @@ Here are some examples:
 
 + `slt_session_duration()` plots the session duration, with the various types of event that takes computation time: JS and CSS load, R computation... 
 
-```{r 12-step-by-step-secure-18 }
+```{r 12-step-by-step-secure-19 }
 slt_session_duration(shinyload_runs)
 ```
 
 + `slt_waterfall()` plots the waterfall graph of session durations, ordered by events. 
 
-```{r 12-step-by-step-secure-19 }
+```{r 12-step-by-step-secure-20 }
 slt_waterfall(shinyload_runs)
 ```
 
 And if you need to bundle everything into an HTML reports, `shinyloadtest_report()` is what you are looking for. 
 
-```{r 12-step-by-step-secure-20, eval = FALSE}
+```{r 12-step-by-step-secure-21, eval = FALSE}
 shinyloadtest_report(shinyload_runs)
 ```
 
@@ -333,31 +337,30 @@ That's where `{dockerstats}` [@R-dockerstats] can come into play: this package i
 
 You can get the `{dockerstats}` package from GitHub with:
 
-```{r 12-step-by-step-secure-21, eval = FALSE}
+```{r 12-step-by-step-secure-22, eval = FALSE}
 remotes::install_github("ColinFay/dockerstats")
 ```
 
-```{r 12-step-by-step-secure-22 }
+```{r 12-step-by-step-secure-23 }
 library(dockerstats)
 ```
 
-
 With these stats, we can monitor the load on the app when it is run in a docker container. 
 
-```{r 12-step-by-step-secure-23, echo = FALSE, error = TRUE, eval = FALSE}
+```{r 12-step-by-step-secure-24, echo = FALSE, error = TRUE, eval = TRUE, cache=TRUE}
 try({system("docker rm hexmake")})
 system("docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", wait = FALSE)
 Sys.sleep(5)
 ```
 
-```{r 12-step-by-step-secure-24, eval = FALSE}
+```{r 12-step-by-step-secure-25, eval = FALSE}
 system("docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", wait = FALSE)
 ```
 
 Let's say now we want the stats for the hexmake container:
 
-```{r 12-step-by-step-secure-25, eval = FALSE}
-dockerstats::dockerstats("hexmake")
+```{r 12-step-by-step-secure-26, eval = TRUE, cache=TRUE}
+dockerstats("hexmake")
 ```
 
 Of course, right now nobody is using the app, so the usage can be pretty small. 
@@ -365,29 +368,17 @@ But let's push it a little bit an mimic a lot of connections.
 
 To do that, we can replay our `shinycannon` call, with at the same time using the `dockerstats_recurse()` function, that will recursively call `dockerstats()` on a regular interval. 
 
-```{bash 12-step-by-step-secure-26, eval = FALSE}
-shinycannon shinylogs/recording.log http://localhost:2811 --workers 10 --output-dir shinylogs/run2
+```{bash 12-step-by-step-secure-27, eval = FALSE}
+shinycannon shinylogs/recording.log http://localhost:2811 --workers 10 --output-dir shinylogs/run3
 ```
 
 Let's launch at the same time a `dockerstats_recurse()`
 For example, here, we will print, on each loop, the `MemUsage` of the container, then saving the data inside a `dockerstats.csv` file. 
 
-```{r 12-step-by-step-secure-27, eval = FALSE}
+```{r 12-step-by-step-secure-28, eval = FALSE}
 dockerstats_recurse(
   "hexmake",
-  callback = function(res){
-    print(
-      paste("Mem usage: ", res$MemUsage)
-    )
-    write.table(
-      res, 
-      "dockerstats.csv", 
-      append = TRUE, 
-      col.names = FALSE, 
-      row.names = FALSE, 
-      sep = ","
-    )
-  }
+  callback = append_csv(file = "shinylogs/dockerstats.csv", print = TRUE)
 )
 ```
 
@@ -395,24 +386,24 @@ Here is what both these processes look side to side:
 
 (ref:dockerstatscap) `{dockerstats}` and `shinycannon` running side-by-side at the same time.
 
-```{r 12-step-by-step-secure-28, echo=FALSE, fig.cap='(ref:dockerstatscap)'}
+```{r 12-step-by-step-secure-29, echo=FALSE, fig.cap='(ref:dockerstatscap)'}
 knitr::include_graphics("img/hexmake-dockerstats.png")
 ```
 
 As you can see, as the number of connections grow, the memory usage grows. 
 And we now have a csv with the evolution of the `docker stats` records over time!
 
-```{r 12-step-by-step-secure-29 }
+```{r 12-step-by-step-secure-30 }
 docker_stats <- read_appended_csv(
   "shinylogs/dockerstats.csv"
 )
 ```
 
-```{r 12-step-by-step-secure-30 }
+```{r 12-step-by-step-secure-31 }
 dplyr::glimpse(docker_stats)
 ```
 
-```{r 12-step-by-step-secure-31, include=FALSE, eval = FALSE}
+```{r 12-step-by-step-secure-32, include=FALSE, eval = TRUE, cache=TRUE}
 try({system("docker kill hexmake")})
 ```
 
@@ -420,7 +411,7 @@ If you need a deeper look into the connection between application actions and th
 
 Let's record the computation of the `hexmake` container containing the same app as before. 
 
-```{r 12-step-by-step-secure-32, eval = FALSE}
+```{r 12-step-by-step-secure-33, eval = TRUE, cache=TRUE}
 system(
   "docker run -p 2708:80 --rm --name hexmake2 -d colinfay/hexmake", 
   wait = FALSE
@@ -430,7 +421,6 @@ test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
   chrome_port = httpuv::randomPort(),
   url ="http://localhost:2708",
-  inspect = FALSE,
   headless = TRUE
 )
 test$wait_for_shiny_ready()
@@ -448,18 +438,19 @@ for (i in letters[1:10]){
   )
 }
 system("docker kill hexmake2")
+
+test$stop()
 ```
 
 And draw a small graph of this evolution: 
 
-```{r 12-step-by-step-secure-33, eval = FALSE}
+```{r 12-step-by-step-secure-34, eval = TRUE, cache=TRUE}
 library(dplyr, warn.conflicts = FALSE)
 results <- results %>% 
   mutate(
     MemUsage = to_mib(MemUsage), 
     record_time = as.POSIXct(record_time)
   )
-
 library(ggplot2)
 ggplot(data = results, aes(x = record_time)) + 
   geom_line(aes(y = MemUsage)) + 
@@ -529,7 +520,7 @@ These kind of bugs are even harder to detect as `{geojsonsf}` was not a direct d
 
 (ref:geojsoncap) Breaking changes in `{geojsonsf}`, a dependency of a dependency of our Shiny application.
 
-```{r 12-step-by-step-secure-34, echo=FALSE, fig.cap='(ref:geojsoncap)'}
+```{r 12-step-by-step-secure-35, echo=FALSE, fig.cap='(ref:geojsoncap)'}
 knitr::include_graphics("img/geojson.png")
 ```
 
@@ -546,7 +537,7 @@ That means that you can have `{geojsonsf}` version `1.2.1` in one of your projec
 `r right_link("Introduction to renv", "https://rstudio.github.io/renv/articles/renv.html")`
 
 The first thing to do with `{renv}` is initiating it with the `init()` function. 
-```{r 12-step-by-step-secure-35, eval = FALSE}
+```{r 12-step-by-step-secure-36, eval = FALSE}
 library(renv)
 init()
 ```
@@ -556,16 +547,18 @@ This function does several things:
 + Create/modify the `.Rprofile` file at the root of your project. 
 Here is an example of what this files may look like inside an empty project: 
 
-```{r 12-step-by-step-secure-36, comment="", echo = FALSE}
-readLines("data-raw/.Rprofile")
+```{r 12-step-by-step-secure-37, comment="", echo = FALSE}
+readLines("data-raw/.Rprofile") %>%
+  glue::as_glue()
 ```
 
 In this example, there is just one call to a script, one located at `renv/activate.R`.
 
 + It creates a `renv.lock` file, which will list all the package dependencies
 
-```{r 12-step-by-step-secure-37, comment="", echo = FALSE}
-readLines("data-raw/renv.lock")
+```{r 12-step-by-step-secure-38, comment="", echo = FALSE}
+readLines("data-raw/renv.lock") %>%
+  glue::as_glue()
 ```
 
 As we have initiated an empty project, we do not have any dependencies here. 
@@ -575,7 +568,7 @@ Bitbucket, and even local repositories.
 
 The `renv/` folder contains a series of files that that store your settings and the necessary packages, using a structure that mimics a local repository.
 
-```{r 12-step-by-step-secure-38 }
+```{r 12-step-by-step-secure-39 }
 fs::dir_tree("data-raw/renv/")
 ```
 
@@ -589,25 +582,25 @@ This shim will search into the local cache to see if the package has already bee
 
 Now, we need to install a new package, for example `{attempt}` [@R-attempt]:
 
-```{r 12-step-by-step-secure-39, eval = FALSE}
+```{r 12-step-by-step-secure-40, eval = FALSE}
 install.packages("attempt")
 ```
 
 We will now add a little call to this library now:
 
-```{r 12-step-by-step-secure-40 }
+```{r 12-step-by-step-secure-41 }
 write("library(attempt)", "script.R")
 ```
 
 Once you want to update your `{renv}` `Lockfile`, call `snapshot()`
 
-```{r 12-step-by-step-secure-41, eval = FALSE}
+```{r 12-step-by-step-secure-42, eval = FALSE}
 renv::snapshot(confirm = FALSE)
 ```
 
 Note that if you are building an application as a package, use `renv::snapshot(type = "explicit")` (need version > `0.9.3-99`): this will only capture the dependencies listed in the `DESCRIPTION` file.
 
-```{r 12-step-by-step-secure-42, comment="", echo = FALSE}
+```{r 12-step-by-step-secure-43, comment="", echo = FALSE}
 readLines("data-raw/renv.lock") %>%
   glue::as_glue()
 ```
@@ -659,7 +652,7 @@ If you have a look at the `03_deploy.R` file in the `dev` folder, you will find 
 
 For example, to create a `Dockerfile` for a `{golem}` project, you can run, from the root of your package:
 
-```{r 12-step-by-step-secure-43, eval=FALSE}
+```{r 12-step-by-step-secure-44, eval=FALSE}
 golem::add_dockerfile()
 ```
 
@@ -667,7 +660,7 @@ Let's take some time to understand file, or how we could be building it from scr
 
 1. `FROM`
 
-```{r 12-step-by-step-secure-44, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-45, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[1] %>% 
   glue::as_glue()
 ```
@@ -676,7 +669,7 @@ This line defines what version of R to use for deploying your application.
 This `FROM` line is the one that sets an image to start from: you rarely (if ever) build a Docker image from nothing, but instead you use an existing image on top of which you build your own image.
 Here, we choose one of the [r-ver](https://hub.docker.com/r/rocker/r-ver/) docker images, based on the output of:
 
-```{r 12-step-by-step-secure-45, comment=""}
+```{r 12-step-by-step-secure-46, comment=""}
 R.Version()$version.string
 ```
 
@@ -685,21 +678,21 @@ R.Version()$version.string
 The `RUN` calls in the file refers to bash calls that are used to build the image. 
 For example, the second line of the `Dockerfile` installs all the system requirements needed by our application.
 
-```{r 12-step-by-step-secure-46, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-47, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[2] %>% 
   glue::as_glue()
 ```
 
 In the subsequent `RUN` calls, `{golem}` chooses to call `remotes::install_version()` to be sure we install the version of the package that matches the one from your computer.
 
-```{r 12-step-by-step-secure-47, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-48, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[6] %>% 
   glue::as_glue()
 ```
 
 As you can see, it matches the local version: 
 
-```{r 12-step-by-step-secure-48, comment=""}
+```{r 12-step-by-step-secure-49, comment=""}
 packageVersion("config")
 ```
 
@@ -708,7 +701,7 @@ packageVersion("config")
 This Docker entry takes a folder or a file, and copies it inside the image. 
 With `{golem}`, we are adding the current project, containing the app, to a folder called `/build_zone`. 
 
-```{r 12-step-by-step-secure-49, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-50, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[13] %>% 
   glue::as_glue()
 ```
@@ -717,7 +710,7 @@ readLines("data-raw/Dockerfile")[13] %>%
 
 This command defines which port of the container will be available from the outside of the container.
 
-```{r 12-step-by-step-secure-50, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-51, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[16] %>% 
   glue::as_glue()
 ```
@@ -727,7 +720,7 @@ readLines("data-raw/Dockerfile")[16] %>%
 This final command is the one that is launched when you run a container. 
 With a `{shiny}` app, this command is the one that launches the application.  
 
-```{r 12-step-by-step-secure-51, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-52, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[16] %>% 
   glue::as_glue()
 ```
@@ -737,7 +730,7 @@ readLines("data-raw/Dockerfile")[16] %>%
 If you want to do everything from the R command line, the `{dockerfiler}` [@R-dockerfiler] package is here for you! 
 This package allows you to generate a `Dockerfile` straight from R: 
 
-```{r 12-step-by-step-secure-52 }
+```{r 12-step-by-step-secure-53 }
 library(dockerfiler)
 my_dock <- Dockerfile$new()
 my_dock$RUN("apt-get update && apt-get install -y  git-core libcurl4-openssl-dev")
