cite all + conflict.policy to FALSE

--- a/index.Rmd
+++ b/index.Rmd
@@ -14,17 +14,22 @@ description: "Engineering Production-Grade Shiny Apps"
 favicon: img/favicon.ico
 github-repo: ThinkR-open/building-shiny-apps-workflow
 graphics: yes
+nocite: '@*'
 #cover-image: images/cover.jpg
 ---
 
 ```{r index-1, include = FALSE}
 knitr::opts_chunk$set( 
   comment = "", 
-  cache = TRUE
+  cache = FALSE
 )
 
 options(
-  htmltools.dir.version = FALSE, formatR.indent = 2, width = 55, digits = 4
+  htmltools.dir.version = FALSE, 
+  formatR.indent = 2, 
+  width = 55, 
+  digits = 4, 
+  conflicts.policy = FALSE
 )
 ```
 
