Added Algorithm to live by to book.bib

--- a/book.bib
+++ b/book.bib
@@ -84,3 +84,12 @@ Eprint = {arXiv:2001.10641},
  month = {apr},
  isbn = {0131429019}
 }
+
+@book{brianchristian2016,
+ Author = {Brian Christian and Tom Griffiths},
+ title = {Algorithms to Live by : The Computer Science of Human Decisions},
+ publisher = {Henry Holt},
+ year = {2016},
+ month = {apr},
+ isbn = {1627790365}
+}
