Fix some minor typos

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -76,7 +76,7 @@ This book will also bring you strategy to help you cope with the need for simpli
 
 ### Balancing complexities
 
-There is an inherent tension between these two source of complexity, as designing an app means finding a good balance between implementation and interface complexity.
+There is an inherent tension between these two sources of complexity, as designing an app means finding a good balance between implementation and interface complexity.
 Lowering one source of complexity usually means increasing the other, and managing an application project means knowing where to draw the line.
 This usually requires restraining yourself from implementing too much features, and still create an application that is easy to use, and that fits the requirements you have received. 
 
