--- a/book.bib
+++ b/book.bib
@@ -93,3 +93,10 @@ Eprint = {arXiv:2001.10641},
  month = {apr},
  isbn = {1627790365}
 }
+
+@book{rpkg,
+ Author = {Hadley Wickham and Jennifer Bryan},
+ title = {R Packages}, 
+ year = {2020}, 
+ url = {https://r-pkgs.org/}
+}
