Deploy is back to being a full part

--- a/14-deploy-with-golem.Rmd
+++ b/14-deploy-with-golem.Rmd
@@ -1,3 +1,5 @@
+# (PART) Step 5: Deploy {-}
+
 # Deploy your application {#deploy-golem}
 
 > Your deploys should be as boring, straightforward, and stress-free as possible.
