tried to disable crayon

--- a/index.Rmd
+++ b/index.Rmd
@@ -29,7 +29,8 @@ options(
   formatR.indent = 2, 
   width = 55, 
   digits = 4, 
-  conflicts.policy = FALSE
+  conflicts.policy = FALSE, 
+  crayon.enabled = FALSE
 )
 ```
 
