images caption ch 1-6

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -224,7 +224,11 @@ Cyclomatic complexity is computed based on a control-flow graph
 ^[A control flow graph is a graph representing all the possible paths a piece of code can take while it is executed.] 
 representation of an algorithm. 
 
-![](img/controlflow.png)
+(ref:controlflowcap) Control-flow graph representation of an algorithm.
+
+```{r, echo=FALSE, fig.cap="(ref:controlflowcap)"}
+knitr::include_graphics("img/controlflow.png")
+```
 
 _(The following paragraph details the algorithm implementation, feel free to skip it)_
 The complexity number is then computed by taking the number of nodes, subtracting the number of edges, plus two times the number of connected components of this graph. 
