--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -84,8 +84,9 @@ Splitting a Shiny project is made possible by following two techniques:
 
 + Split your app into Shiny Modules, so that your app can be though of as a tree, making it possible for every developer to concentrate on one node, and only one, instead of having to think about the global infrastructure when implementing features
 
+(ref:apptreecap) Representation of a Shiny application with its modules and sub-modules.
 
-```{r 02-planning-ahead-1, echo=FALSE}
+```{r 02-planning-ahead-1, echo=FALSE, fig.cap="(ref:apptreecap)"}
 knitr::include_graphics("img/app_tree.png")
 ```
 
