--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -404,7 +404,11 @@ As a live example, we can have a look at [mod_dataviz.R](https://github.com/Coli
 This application contains 6 tabs, 4 of them being pretty much alike: a side bar with inputs, a main panel with a button, and the plot. 
 This is a typical case where you should reuse modules: if two or more parts are relatively similar, it is easier to bundle it inside a reusable module, and condition the ui/server with function arguments. 
 
-![`{tidytuesday201942}`](img/tidytuesdayapp.png)
+(ref:tidytuesdayappcap) Snapshot of the {tidytuesday201942} Shiny application.
+
+```{r, echo=FALSE, fig.cap="(ref:tidytuesdayappcap)"}
+knitr::include_graphics("img/tidytuesdayapp.png")
+```
 
 Here, are some examples of how it works in the module UI:
 
