--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -14,6 +14,15 @@ Note that the version used at the time of writing this book is `r packageVersion
 
 ## What is `{golem}`?
 
+<style>
+img.left {
+  float: left;
+  margin-right: 1em;
+}
+</style>
+
+<img src="img/thinkr-hex-golem2.png" class = "left" width = "20%">
+
 `{golem}` can be thought as a toolkit for simplifying the creation, development and deployment of a Shiny application. 
 It's focused on building applications that will be sent to production, but of course starting with `{golem}` from the very beginning is also possible, even recommended: it is easier to start with `{golem}` than to refactor your all codebase to fit into the framework.
 
