--- a/index.Rmd
+++ b/index.Rmd
@@ -21,7 +21,8 @@ nocite: '@*'
 ```{r index-1, include = FALSE}
 knitr::opts_chunk$set( 
   comment = "", 
-  cache = FALSE
+  cache = TRUE,
+  fig.align = "center"
 )
 
 options(
