Revert "Fix some minor typos"
This reverts commit 45f886d095504c99d442b9ea7cfd49be7aab1230.

--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -22,7 +22,7 @@ First of all, you will need to add __metadata__ to your application.
 In other words, all the necessary information for something that runs in production: the name of the app, the version number (which is crucial to any serious, production-level project), what the application does, who to contact if something goes wrong... etc. 
 
 Second, you need to find a way to __handle the dependencies__. 
-As you know, when you want to push your app into production, you do not want to have this conversation with IT people: 
+As you know, when you want to push your app into production, you do not want to have this conversation with I.T. people: 
 
 
 >IT: Hey, I tried to `source("app.R")` as you said, but I got an error. 
@@ -280,7 +280,7 @@ In our case, we could say that 90% of the modules we write are never reused
 
 With Shiny modules, you will be writing a combination of UI and server functions. 
 Think of them as small, standalone Shiny apps, which handle a fraction of your global application. 
-If you develop R packages, chances are you have split your functions into series of smaller functions. With Shiny modules, you are doing the exact same thing: with just a little bit of tweaking, you can split your application into series of smaller applications. 
+If you develop R packages, chances are you have split your functions into series of smaller functions. With shiny modules, you are doing the exact same thing: with just a little bit of tweaking, you can split your application into series of smaller applications. 
 
 ### When should you modularize?
 
