--- a/13-secure.Rmd
+++ b/13-secure.Rmd
@@ -22,8 +22,8 @@ In this chapter, we'll be focusing on `git`, but you should be aware that other 
 
 There are many advantages to VC, including:
 
-+ __You can go back in time__. 
-With a VC system like `git`, every change is recorded (well, every __committed__ change), meaning that you can potentially go back in time to a previous version of a project, and see the complete history of a file. 
++ __You can get back in time__. 
+With a VC system like `git`, every change is recorded (well, every __committed__ change), meaning that you can potentially get back in time to a previous version of a project, and see the complete history of a file. 
 This feature is very important: if you accidentally made changes that break your application, or if you deleted a feature you thought you would never need, you can go back to where you were a few hours, a few days, a few months back.
 
 + __Several people can work on the same file__. 
