--- a/index.Rmd
+++ b/index.Rmd
@@ -95,7 +95,7 @@ passionately trains very diverse learner profiles at R.
 ## Want to help? {-}
 
 Any feedbacks on the book is very welcome. 
-Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues), or to make a PR if you spot a typo (I'm not a native English speaker, so there might be some waiting to be found ;) ).
+Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues), or to make a PR if you spot a typo (I'm not a native english speaker, so there might be some waiting to be found ;) ).
 
 ## Other resources {-}
 
