--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -22,7 +22,7 @@ Indeed, starting with hacky foundations will lead to two possibilities:
 + You will have to rewrite everything from scratch to have a robust application for production.
 + If you do not want to do that, you will get stucked with a legacy code base for the app that is built on top of hacky functions.
 
-Either way, that is a heavy technical debt.
+Either way, that is an heavy technical debt.
 
 The idea there is that even if Shiny is a good tool for prototyping, there is no harm in starting your application on solid ground, even for a prototype: the sooner you start with a robust framework the better, and the longer you wait the harder it gets to convert your application to a production-ready application: the larger the codebase, the harder it is to untangle everything and make it work.
 
@@ -127,7 +127,7 @@ Note that other management tools can be used there: for example `redmine`, `jira
 
 #### Developers
 
-As a developer, you will focus on small functionalities, make sure to protect your work with tests and verify that your implementations do not break others work. 
+As a developer, you will focus on small functionnalities, make sure to protect your work with tests and verify that your implementations do not break others work. 
 If the person in charge correctly splitted the work between developers of the team, you will probably be focusing on one or more parts of the application, but you do not need to know every single bit of what the application is doing. 
 In a perfect world, the application is split in various Shiny Modules, one module equals one file and each member of the team will be assigned a safe development of one or more modules.
 
