--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -411,7 +411,7 @@ Let's record the computation of the `hexmake` container containing the same app 
 
 First, launch the container:
 
-```{r}
+```{r 12-step-by-step-secure-1-bis}
 system(
   "docker run -p 2708:80 --rm --name hexmake2 -d colinfay/hexmake", 
   wait = FALSE
