--- a/index.Rmd
+++ b/index.Rmd
@@ -88,15 +88,15 @@ Sébastien is a data scientist at ThinkR, where he teaches anything R related fr
 
 <li><a href="https://twitter.com/VincentGuyader">Vincent Guyader</a></li>
 
-ThinkR Founder, with more than 10 years of experience, and with a
-scientific and technical background, Vincent is an R-enthusiast.
-He still has his hands in the code, whether to develop applications,
-analyze data or build packages. When he’s not coding, he plays with Docker
-and manages servers.
-Meeting highly technical challenges is not incompatible with pedagogy: he
+ThinkR Founder, with more than 10 years of experience, and with a scientific and technical background, Vincent is an R-enthusiast. He still has his hands in the code, whether to develop applications, analyze data or build packages. When he’s not coding, he plays with Docker
+and manages servers. He strongly believes that meeting highly technical challenges is not incompatible with pedagogy: he
 passionately trains very diverse learner profiles at R.
 
 <li><a href="https://twitter.com/CervanGirard">Cervan Girard</a></li>
+
+Cervan is Data Scientist at ThinkR. 
+He is enthusiastic and motivated when it comes to rolling up his sleeves for new challenges. Even if it means venturing dangerously into the depths of R, learning new languages and experimenting outside your comfort zone.
+Nevertheless, it remains reliable, constructive and efficient when it comes to using its skills to train or develop. He also enjoys training learners of all levels in the R language.
 
 ## Want to help? {-}
 
