rm crayon options and swtiched to GA options

--- a/index.Rmd
+++ b/index.Rmd
@@ -29,8 +29,7 @@ options(
   formatR.indent = 2, 
   width = 55, 
   digits = 4, 
-  conflicts.policy = FALSE, 
-  crayon.enabled = FALSE
+  conflicts.policy = FALSE
 )
 ```
 
@@ -160,7 +159,8 @@ Thanks to them for their help on the book!
 + [Dan S. Reznik](https://github.com/dan-reznik){target="_blank"}, for proof-reading the JavaScript chapter.
 + [Harry Anderson](https://github.com/xari){target="_blank"}, for giving feedback on the JavaScript chapter.
 + [Julian Stanley](https://github.com/julianstanley){target="_blank"}, for proof-reading chapter 3. 
-
++ [Aron Strandberg](https://github.com/aronolof) for proofreading several chapters.
++ [jpmarindiaz](https://github.com/jpmarindiaz){target="_blank"} for proofreading several chapters.
 
 ```{r index-4, include = FALSE}
 # Some internal funs
